--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,9 @@
   list-style: none;
 }
 html {
-    scroll-behavior: smooth;
-  }
-  
+  scroll-behavior: smooth;
+}
+
 .container {
   width: 100%;
   max-width: 1280px;
@@ -32,13 +32,13 @@ h6 {
 p {
   color: #22343d;
   font-weight: 400;
-  font-size: 18px;
+  font-size: clamp(0.875rem, 0.792rem + 0.42vw, 1.125rem);
   line-height: 28px;
 }
 button {
   color: #173a56;
   font-weight: 600;
-  font-size: 16px;
+  font-size: clamp(0.688rem, 0.583rem + 0.52vw, 1rem);
   border: 1px solid #bcd0e5;
   border-radius: 4px;
   background: none;
@@ -48,14 +48,13 @@ a {
 }
 /* --------HEADER--------- */
 
-
-  #header {
-    top: 0;
-    position: sticky;
-    padding-block: 10px;
-    backdrop-filter: blur(10px);
-    z-index: 99;
-    background-color: #ffffffaf;
+#header {
+  top: 0;
+  position: sticky;
+  padding-block: 10px;
+  backdrop-filter: blur(4px);
+  z-index: 99;
+  background-color: #ffffffaf;
 }
 .header {
   display: flex;
@@ -141,9 +140,7 @@ a {
   align-items: center;
 }
 .main-btn button:nth-child(1) {
-  width: 100%;
-  max-width: 175px;
-  min-height: 53px;
+  padding: 14px 31px;
 }
 .main-btn button:nth-child(1):hover {
   background-color: #02897a;
@@ -154,25 +151,18 @@ a {
   align-items: center;
   gap: 4px;
   color: #02897a;
-  width: 100%;
-  width: 265px;
-  height: 53px;
   border: none;
   text-decoration: underline;
-}
+} 
 .main-btn button:nth-child(2) ion-icon {
-  font-size: 22px;
-}
-.main-btn button:nth-child(2):hover {
-  background-color: #02897a;
-  color: #fff;
+  font-size: clamp(1.125rem, 1.042rem + 0.42vw, 1.375rem);
 }
 .main img {
   max-width: clamp(25rem, 20.833rem + 20.83vw, 37.5rem);
   min-height: clamp(22.188rem, 18.006rem + 20.91vw, 34.733rem);
 }
 #product {
-    padding-top: 90px;
+  padding-top: 90px;
 }
 .product {
   display: flex;
@@ -221,21 +211,16 @@ a {
   padding-bottom: 4px;
 }
 
-
 .prod-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  
-  
 }
 .prod-btn button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  max-width: 175px;
-  min-height: 53px;
+  padding: 12px 24px;
   border: 1px solid #bcd0e5;
 }
 .prod-btn button:hover {
@@ -246,7 +231,7 @@ a {
   padding-block: 50px;
 }
 .custom {
-    padding-block: 70px;
+  padding-block: 70px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -254,7 +239,7 @@ a {
 .custom-content {
   width: 100%;
   max-width: 439px;
-  min-height: 435px;
+  min-height: 405px;
   display: flex;
   flex-direction: column;
   gap: 28px;
@@ -334,4 +319,373 @@ a {
   width: 100%;
   max-width: 34px;
   min-height: 34px;
+}
+
+.proces {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 35px;
+}
+.proces button {
+  padding: 12px 34px;
+  border: 1px solid #bcd0e5;
+  border-radius: 6px;
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  font-weight: 700;
+  line-height: 24px;
+}
+.proces button:hover {
+  background-color: #02897a;
+  color: #fff;
+}
+.proces-top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 14px;
+  max-width: 542px;
+  min-height: 116px;
+}
+
+.proces-commit {
+  display: flex;
+  justify-content: space-around;
+  gap: 260px;
+}
+.commit {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 28px;
+}
+.commit-box {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.commit p {
+  padding: 12px 20px;
+  border-radius: 50px;
+  background-color: #f1eded;
+  font-weight: 500;
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  line-height: 24px;
+}
+.commit img {
+  width: 100%;
+  max-width: 98px;
+  min-height: 98px;
+}
+#strateg {
+  padding-block: 40px;
+}
+.strateg-top {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding-bottom: 25px;
+}
+.strateg-top h1 {
+  font-size: clamp(0.875rem, 0.458rem + 2.08vw, 2.125rem);
+  font-weight: 700;
+  line-height: 51px;
+}
+.strateg-top p {
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  font-weight: 500;
+  line-height: 26px;
+}
+.strateg-blod {
+  display: flex;
+  justify-content: space-between;
+}
+
+.blod-box {
+  width: 100%;
+  max-width: 348px;
+  min-height: 359px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.blod-box img {
+  width: 100%;
+  max-width: 348px;
+  min-height: 185px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+.blod-box p {
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  font-weight: 400;
+  line-height: 28px;
+}
+.blod-box span {
+  font-weight: 900;
+}
+.blod-box h2 {
+  font-size: clamp(1.125rem, 1rem + 0.63vw, 1.5rem);
+  font-weight: 700;
+  line-height: 40px;
+}
+.blod-box:hover h2 {
+  color: #02897a;
+}
+
+#price {
+  padding-block: 30px;
+}
+.price-top {
+  padding-bottom: 32px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+}
+.price-top h1 {
+  font-size: clamp(1.625rem, 1.5rem + 0.63vw, 2rem);
+  font-weight: 700;
+  line-height: 51px;
+}
+.price-top p {
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  font-weight: 500;
+  line-height: 34px;
+  color: #22343d;
+}
+.price {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.price-box {
+  width: 100%;
+  max-width: 322.65px;
+  min-height: 456px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid #0000002d;
+}
+.price-box:hover {
+  background-color: #02897a;
+  color: #fff;
+}
+.price-box h2 {
+  font-size: clamp(1.125rem, 1rem + 0.63vw, 1.5rem);
+  font-weight: 700;
+  line-height: 40px;
+}
+.price-box p {
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  font-weight: 400;
+  line-height: 40px;
+  color: #000;
+}
+.price-div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.price-div h1 {
+  font-size: clamp(3.75rem, 3.417rem + 1.67vw, 4.75rem);
+  font-weight: 700;
+}
+.price-div h1 {
+  color: #02897a;
+}
+.price-span {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.price-span h2 {
+  font-size: clamp(1.063rem, 0.917rem + 0.73vw, 1.5rem) px;
+  font-weight: 700;
+  line-height: 30px;
+  color: #02897a;
+}
+.price-span p {
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  font-weight: 400;
+  line-height: 19px;
+  color: #afafaf;
+}
+.price-bottom {
+  padding-block: 22px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.price-bottom h3 {
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  font-weight: 500;
+  line-height: 22px;
+  color: #22343d;
+}
+.price-box button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 122px;
+  min-height: 39px;
+  font-size: clamp(0.875rem, 0.792rem + 0.42vw, 1.125rem);
+  font-weight: 550;
+  line-height: 21.94px;
+  border: none;
+  border-radius: 6px;
+  color: #fff;
+  background-color: #02897a;
+}
+.price-box:hover button {
+  color: #02897a;
+  background-color: #fff;
+}
+.price-box:hover {
+  background-color: #02897a;
+  color: #fff;
+}
+/* .price-box:hover .price-span h2, p {
+    color: #fff;
+  }
+  .price-box:hover .price-div h1 {
+    color: #fff;
+  }
+  .price-box:hover h2 {
+    color: #fff;
+  }
+  .price-box:hover p {
+    color: #fff;
+  }
+  .price-box:hover .price-bottom h3 {
+    color: #fff;
+  } */
+
+#say {
+    padding-block: 50px;
+}
+.say-top {
+    padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 12px;
+}
+.say-top h1 {
+font-size: clamp(1.75rem, 1.625rem + 0.63vw, 2.125rem);
+font-weight: 700;
+line-height: 57px;
+}
+.say {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.say-box {
+    padding: 15px;
+  width: 100%;
+  max-width: 300px;
+  min-height: 180px;
+  border-radius: 5px;
+  border: 1px solid #DEDEDE;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 11px;
+}
+.say-box img {
+  width: 100%;
+  max-width: 106.4px;
+  min-height: 18.35px;
+}
+.say-box p {
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  font-weight: 400;
+  line-height: 28px;
+  color: #737373;
+}
+
+.say-say {
+  display: flex;
+  gap: 10px;
+}
+
+.say-say h1 {
+  width: 100%;
+  width: 81px;
+  height: 24px;
+  font-size: clamp(0.75rem, 0.667rem + 0.42vw, 1rem);
+  font-weight: 600;
+  line-height: 24px;
+  color: #02897a;
+}
+.say-say h2 {
+  font-size: clamp(0.688rem, 0.625rem + 0.31vw, 0.875rem);
+  font-weight: 500;
+  line-height: 24px;
+}
+#join {
+    padding-block: 70px;
+}
+.join-dad {
+    display: flex;
+    justify-content: center;
+}
+.join {
+    padding-left: 35px;
+    width: 100%;
+    max-width: 890px;
+    min-height: 305px;
+    background-color: #02897a;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 36px;
+
+    
+}
+.join-content {
+    display: flex;
+    flex-direction: column;
+    gap: 52px;
+}
+.join-content h1 {
+font-size: clamp(1.625rem, 1.5rem + 0.63vw, 2rem);
+font-weight: 600;
+line-height: 48.45px;
+color: #fff;
+}
+.join-content button {
+    width: 100%;
+    max-width: 128px;
+    min-height: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+font-size: clamp(0.875rem, 0.792rem + 0.42vw, 1.125rem);
+font-weight: 600;
+line-height: 30px;
+border-radius: 10px;
+background-color: #fff;
+color: #02897A;
+}
+.join-img img {
+    width: 100%;
+    max-width: 351px;
+    min-height: 331px;
+    
 }
